Spacing fix for sections.

--- a/_sass/_journal.scss
+++ b/_sass/_journal.scss
@@ -37,5 +37,6 @@
     }
     a {
         text-decoration: none;
+        color: var(--blackInk);
     }
 }
