--- a/_sass/_manifesto.scss
+++ b/_sass/_manifesto.scss
@@ -1,4 +1,5 @@
 .manifesto .intro {
+    margin-top: var(--space-2);
     padding-left: var(--space-1);
     padding-right: var(--space-1);
     font-size: var(--scale-5);
